Fix scrollbars

--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
-body {
+html, body {
   background-color: #EEE;
   margin: 0;
   padding: 0;
+  min-height: 100vh;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
 }
 
 svg {
+  flex: 1 1;
   width: 100%;
-  height: 100vh;
+  max-height: 100vh;
   background-color: #FFF;
 }
